--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<html>
+  <body>
+    <h1>Our Story</h1>
+    <h1>Wedding Party</h1>
+    <h1>Venues</h1>
+    <h1>Accomodations & Attractions</h1>
+    <h1>Registry</h1>
+    <h1>Get in Touch</h1>
+  </body>
+</html>
