--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>CatherineAndRyan.Wedding</title>
 
     <!-- Include the CSS -->
-    <link href="dist/toolkit.min.css" rel="stylesheet">
+    <link href="dist/toolkit-minimal.css" rel="stylesheet">
 
   </head>
   <body>
