--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <div class="col-lg-5">
             <h1 class="block-title m-b-md">
               <span class="text-ribbon">
-                <span>Easy Pricing.</span>
+                <span>Contact Us</span>
               </span></h1>
             <p class="lead">
               <span class="text-ribbon text-muted">
