--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -52,7 +48,7 @@
 <div class="stage" id="stage">
 
   <div class="block block-fill-height app-block-wayne"
-       style="background-image: url(assets/img/lilwayne.jpg)">
+       style="background-image: url(assets/img/ring.jpg)">
     
     <div class="block-sm-middle block-xs-bottom">
       <div class="container">
