--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
           <a href="">The Big Day</a>
         </li>
         <li>
-          <a href="">Accomodations & Attractions</a>
+          <a href="">Accomodations</a>
         </li>
         <li>
-          <a href="">Gift Registry</a>
+          <a href="">Registry</a>
         </li>
         <li>
-          <a href="">Contact Us</a>
+          <a href="">Contact</a>
         </li>
       </ul>
     </div><!--/.nav-collapse -->
