--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     
       <link href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
+      <link href='https://fonts.googleapis.com/css?family=Cinzel:700' rel='stylesheet' type='text/css'>
       <link href="assets/css/toolkit-minimal.css" rel="stylesheet">
       <link href="assets/css/application-minimal.css" rel="stylesheet">
     
