--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
     <div class="navbar-collapse collapse" id="navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li class="active">
-          <a href="">Our Story</a>
+          <a href="#our-story">Our Story</a>
         </li>
         <li>
-          <a href="">Wedding Party</a>
+          <a href="#wedding-party">Wedding Party</a>
         </li>
         <li>
-          <a href="">The Big Day</a>
+          <a href="#the-big-day">The Big Day</a>
         </li>
         <li>
-          <a href="">Accomodations</a>
+          <a href="#accomadations">Accomodations</a>
         </li>
         <li>
-          <a href="">Registry</a>
+          <a href="#registry">Registry</a>
         </li>
         <li>
-          <a href="">Contact</a>
+          <a href="#contact">Contact</a>
         </li>
       </ul>
     </div><!--/.nav-collapse -->
@@ -90,7 +90,7 @@
     <img src="assets/img/ring.jpg">
   </div>
 </div>
-
+<a name="out-story"></a>
 <div class="block block-bordered-lg">
   <div class="container text-center app-translate-15" data-transition="entrance">
     <blockquote class="pull-quote">
@@ -102,7 +102,7 @@
     </blockquote>
   </div>
 </div>
-
+<a name="wedding-party"></a>
 <div class="block block-bordered-lg p-b-0 app-block-stats">
   <div class="container">
     <div class="row">
@@ -149,7 +149,7 @@
     </div>
   </div>
 </div>
-
+<a name="the-big-day"></a>
 <div class="block block-bordered-lg">
   <div class="container">
     <div class="row">
@@ -210,6 +210,7 @@
   </div>
 </div>
 
+<a name="accomodations"></a>
 <div class="block block-bordered-lg p-l-0 p-t-0 p-r-0">
   <div id="carousel-example-generic-2" class="carousel carousel-light slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -307,6 +308,7 @@
   </div>
 </div>
 
+<a name="registry"></a>
 <div class="block block-bordered-lg text-center">
   <div class="container-fluid">
     <p class="lead m-b-md">
