--- a/index.html
+++ b/index.html
@@ -91,9 +91,13 @@
   </div>
 </div>
 <a name="out-story"></a>
-<div class="block block-bordered-lg">
-  <p>Coming Soon!</p>
-</div>
+  <div class="block block-bordered-lg">
+     <div class="container text-center app-translate-15" data-transition="entrance">
+       <blockquote class="pull-quote">
+         <p>Coming soon!</p>
+        </blockquote>
+      </div>
+    </div>
 
 
     <script src="../assets/js/jquery.min.js"></script>
