--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a href="#accomadations">Accomodations</a>
         </li>
         <li>
-          <a href="#registry">Registry</a>
+          <a href="https://www.myregistry.com/wedding-registry/Ryan-Turner-Catherine-Clubb-Brown-Memphis-TN/1083828">Registry</a>
         </li>
         <li>
           <a href="#contact">Contact</a>
