--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
     <img src="assets/img/ring.jpg">
   </div>
 </div>
-<a name="out-story"></a>
-  <div class="block block-bordered-lg">
+  <div class="block block-bordered-lg" id="our-story">
      <div class="container text-center app-translate-15" data-transition="entrance">
        <iframe width="1000" height="720" src="https://www.youtube.com/embed/TqiO9O_wImg" frameborder="0" allowfullscreen></iframe>
        <blockquote class="pull-quote">
