--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <div class="block app-block-intro">
   <div class="container text-center">
-    <img src="assets/img/ring.jpg">
+    <img src="assets/img/aeternumphotography83.jpg">
   </div>
 </div>
   <div class="block block-bordered-lg" id="our-story">
