--- a/index.html
+++ b/index.html
@@ -90,15 +90,18 @@
     <img src="assets/img/aeternumphotography83.jpg">
   </div>
 </div>
-  <div class="block block-bordered-lg" id="our-story">
-     <div class="container text-center app-translate-15" data-transition="entrance">
-       <iframe width="1000" height="720" src="https://www.youtube.com/embed/TqiO9O_wImg" frameborder="0" allowfullscreen></iframe>
-       <blockquote class="pull-quote">
-         <p>Coming soon!</p>
-        </blockquote>
+<div class="block block-bordered-lg" id="our-story">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
+        <p class="lead m-x-auto">Lorem Ipsum <strong>Dolor</strong></p>
       </div>
     </div>
-
+  </div>
+  <div class="container text-center app-translate-15" data-transition="entrance">
+       <iframe width="1000" height="720" src="https://www.youtube.com/embed/TqiO9O_wImg" frameborder="0" allowfullscreen></iframe>
+  </div>
+</div>
 
     <script src="../assets/js/jquery.min.js"></script>
     <script src="../assets/js/toolkit.js"></script>
