--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
 </nav>
 
 
-<div class="block app-block-intro">
+<div class="block app-block-intro" id="intro">
   <div class="container text-center">
     <img src="assets/img/aeternumphotography83.jpg">
   </div>
 </div>
+
 <div class="block block-bordered-lg" id="our-story">
   <div class="container">
     <div class="row">
@@ -100,6 +101,85 @@
   </div>
   <div class="container text-center app-translate-15" data-transition="entrance">
        <iframe width="1000" height="720" src="https://www.youtube.com/embed/TqiO9O_wImg" frameborder="0" allowfullscreen></iframe>
+  </div>
+</div>
+<div class="block block-bordered-lg" id="wedding-party">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
+        <h2 class="block-title m-b-sm text-uppercase">Best Man</h1>
+       <p class="lead m-x-auto"><strong>Forrest Edwards</strong> has known Ryan his whole life. In gradeshool, they worked on websites and computers together. In highschool, they recorded music together in a home studio. Whether they're exploring Memphis or working on a project together, Ryan and Forrest are the greatest of friends.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
+        <h2 class="block-title m-b-sm text-uppercase">Groomsmen</h1>
+        <ul class="featured-list">
+          <li class="m-b-lg">
+            <div class="featured-list-icon text-primary">
+              <!--<span class="icon icon-cloud"></span>-->
+            </div>
+            <p class="featured-list-icon-text m-b-0"><strong>James Arnold</strong></p>
+            <p class="featured-list-icon-text">
+              James is Ryan's greatest friend from gradeschool and highschool. College and careers have split them up, but they have great memories together.
+            </p>
+          </li>
+
+          <li class="m-b-lg">
+            <div class="featured-list-icon text-primary">
+              <!--<span class="icon icon-emoji-neutral"></span>-->
+            </div>
+            <p class="featured-list-icon-text m-b-0"><strong>Cameron Bethke</strong></p>
+            <p class="featured-list-icon-text">
+              Cameron was one of Ryan's roommates in college. They brewed, gamed, and (sometimes) studied together. Lots of late nights... studying...
+            </p>
+          </li>
+
+          <li class="m-b-lg">
+            <div class="featured-list-icon text-primary">
+              <!--<span class="icon icon-emoji-neutral"></span>-->
+            </div>
+            <p class="featured-list-icon-text m-b-0"><strong>David Brown</strong></p>
+            <p class="featured-list-icon-text">
+              ShareDavid is Catherine's only brother. He's been very kind to help welcome Ryan into their family.
+            </p>
+          </li>
+        </ul>
+      </div>
+      <div class="col-sm-6">
+        <ul class="featured-list">
+          <li class="m-b-lg">
+            <div class="featured-list-icon text-primary">
+              <!--<span class="icon icon-cloud"></span>-->
+            </div>
+            <p class="featured-list-icon-text m-b-0"><strong>Sam Eichold</strong></p>
+            <p class="featured-list-icon-text">
+              Sam works with Ryan, and he's quickly become one of Ryan's best friends. They love to bicker and one-up eachother with personal projects.
+            </p>
+          </li>
+
+          <li class="m-b-lg">
+            <div class="featured-list-icon text-primary">
+              <!--<span class="icon icon-emoji-neutral"></span>-->
+            </div>
+            <p class="featured-list-icon-text m-b-0"><strong>Tripp King</strong></p>
+            <p class="featured-list-icon-text">
+              Tripp was another one of Ryan's roommates, and he originally introduced him to Cameron. They had plenty of late nights sharing stories.
+            </p>
+          </li>
+
+          <li class="m-b-lg">
+            <div class="featured-list-icon text-primary">
+              <!--<span class="icon icon-emoji-neutral"></span>-->
+            </div>
+            <p class="featured-list-icon-text m-b-0"><strong>Michael Knight</strong></p>
+            <p class="featured-list-icon-text">
+              Michael has known Ryan since highschool. They spend a lot of time together working on their favorite hobby, amateur radio.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
 
