--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
         <h2 class="block-title m-b-sm text-uppercase">Groomsmen</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6">
         <ul class="featured-list">
           <li class="m-b-lg">
             <div class="featured-list-icon text-primary">
