--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
         <h2 class="block-title m-b-sm text-uppercase">Best Man</h1>
-       <p class="lead m-x-auto"><strong>Forrest Edwards</strong> has known Ryan his whole life. In gradeshool, they worked on websites and computers together. In highschool, they recorded music together in a home studio. Whether they're exploring Memphis or working on a project together, Ryan and Forrest are the greatest of friends.</p>
+       <p class="lead m-x-auto"><strong>Forrest Edwards</strong> and Ryan have known eachother for nearly entire lives. In gradeshool, they worked on websites and computers together. In highschool, they recorded music together in a home studio. Whether they're exploring Memphis or working on a project together, Ryan and Forrest are the greatest of friends.</p>
       </div>
     </div>
     <div class="row">
