--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
 <div class="block block-bordered-lg" id="wedding-party">
   <div class="container">
     <div class="row">
+      <div class="text-center">
+        <img src="assets/img/11162082_10206540512820703_500216319082906813_n.jpg" class="img-circle" />
+      </div>
+    </div>
+    <div class="row">
       <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
         <h2 class="block-title m-b-sm text-uppercase">Best Man</h1>
        <p class="lead m-x-auto"><strong>Forrest Edwards</strong> and Ryan have known eachother for nearly entire lives. In gradeshool, they worked on websites and computers together. In highschool, they recorded music together in a home studio. Whether they're exploring Memphis or working on a project together, Ryan and Forrest are the greatest of friends.</p>
