--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <div class="block block-bordered-lg" id="our-story">
   <div class="container">
-    <div class="row col-sm-2 col-sm-offset-5">
+    <div class="row">
       <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
         <p class="lead m-x-auto">Lorem Ipsum <strong>Dolor</strong></p>
       </div>
@@ -106,8 +106,8 @@
 <div class="block block-bordered-lg" id="wedding-party">
   <div class="container">
     <div class="row">
-      <div class="text-center">
-        <img src="assets/img/11162082_10206540512820703_500216319082906813_n.jpg" class="img-circle" />
+      <div class="text-center col-sm-2 col-sm-offset-5">
+        <img src="assets/img/11162082_10206540512820703_500216319082906813_n.jpg" class="img-circle" style="width: 100%;" />
       </div>
     </div>
     <div class="row">
