--- a/index.html
+++ b/index.html
@@ -72,6 +72,67 @@
     <div class="block block-bordered-lg" id="wedding-party">
       <div class="container">
         <div class="row">
+          <div class="text-center col-sm-2 col-sm-offset-5"> <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97350&w=350&h=350" class="img-circle" style="width: 100%;" /> </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
+            <h2 class="block-title m-b-sm text-uppercase">Maid of Honor</h2>
+            <p class="lead m-x-auto"><strong>Kaitlyn Flagg</strong></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
+            <h2 class="block-title m-b-sm text-uppercase">Bridesmaids</h2> </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <ul class="featured-list">
+              <li class="m-b-lg">
+                <div class="featured-list-icon text-primary">
+                  <!--<span class="icon icon-cloud"></span>--></div>
+                <p class="featured-list-icon-text m-b-0"><strong>Jennifer Brown</strong></p>
+                <p class="featured-list-icon-text"> </p>
+              </li>
+              <li class="m-b-lg">
+                <div class="featured-list-icon text-primary">
+                  <!--<span class="icon icon-emoji-neutral"></span>--></div>
+                <p class="featured-list-icon-text m-b-0"><strong>Sarah Brown-Intoccia</strong></p>
+                <p class="featured-list-icon-text"> </p>
+              </li>
+              <li class="m-b-lg">
+                <div class="featured-list-icon text-primary">
+                  <!--<span class="icon icon-emoji-neutral"></span>--></div>
+                <p class="featured-list-icon-text m-b-0"><strong>Caroline Dean</strong></p>
+                <p class="featured-list-icon-text"> </p>
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-6">
+            <ul class="featured-list">
+              <li class="m-b-lg">
+                <div class="featured-list-icon text-primary">
+                  <!--<span class="icon icon-cloud"></span>--></div>
+                <p class="featured-list-icon-text m-b-0"><strong>Catie Gilliland</strong></p>
+                <p class="featured-list-icon-text"> </p>
+              </li>
+              <li class="m-b-lg">
+                <div class="featured-list-icon text-primary">
+                  <!--<span class="icon icon-emoji-neutral"></span>--></div>
+                <p class="featured-list-icon-text m-b-0"><strong>Megan Turner</strong></p>
+                <p class="featured-list-icon-text"> </p>
+              </li>
+              <li class="m-b-lg">
+                <div class="featured-list-icon text-primary">
+                  <!--<span class="icon icon-emoji-neutral"></span>--></div>
+                <p class="featured-list-icon-text m-b-0"><strong>Liz Wallace</strong></p>
+                <p class="featured-list-icon-text"> </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
           <div class="text-center col-sm-2 col-sm-offset-5"> <img src="assets/img/11162082_10206540512820703_500216319082906813_n.jpg" class="img-circle" style="width: 100%;" /> </div>
         </div>
         <div class="row">
@@ -103,7 +164,7 @@
                 <div class="featured-list-icon text-primary">
                   <!--<span class="icon icon-emoji-neutral"></span>--></div>
                 <p class="featured-list-icon-text m-b-0"><strong>David Brown</strong></p>
-                <p class="featured-list-icon-text"> ShareDavid is Catherine's only brother. He's been very kind to help welcome Ryan into their family. </p>
+                <p class="featured-list-icon-text"> David is Catherine's only brother. He's been very kind to help welcome Ryan into their family. </p>
               </li>
             </ul>
           </div>
