--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
         </div>
       </div>
-      <div class="container">
+      <div class="container m-t">
         <div class="row">
           <div class="text-center col-sm-2 col-sm-offset-5"> <img src="assets/img/11162082_10206540512820703_500216319082906813_n.jpg" class="img-circle" style="width: 100%;" /> </div>
         </div>
