--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
           </div>
         </div>
       </div>
-      <div class="container m-t">
+      <div class="container m-t-lg">
         <div class="row">
           <div class="text-center col-sm-2 col-sm-offset-5"> <img src="assets/img/11162082_10206540512820703_500216319082906813_n.jpg" class="img-circle" style="width: 100%;" /> </div>
         </div>
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
             <h2 class="block-title m-b-sm text-uppercase">Best Man</h2>
-            <p class="lead m-x-auto"><strong>Forrest Edwards</strong> and Ryan have known eachother for nearly entire lives. In gradeshool, they worked on websites and computers together. In highschool, they recorded music together in a home studio. Whether they're exploring Memphis or working on a project together, Ryan and Forrest are the greatest of friends.</p>
+            <p class="lead m-x-auto"><strong>Forrest Edwards</strong> and Ryan have known eachother for nearly their entire lives. In gradeshool, they worked on websites and computers together. In highschool, they recorded music together in a home studio. Whether they're exploring Memphis or working on a project together, Ryan and Forrest are the greatest of friends.</p>
           </div>
         </div>
         <div class="row">
