--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="navbar-collapse collapse" id="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"> <a href="#our-story">Our Story</a> </li>
+            <li> <a href="#our-story">Our Story</a> </li>
             <li> <a href="#wedding-party">Wedding Party</a> </li>
             <li> <a href="#the-big-day">The Big Day</a> </li>
             <li> <a href="#accomadations">Accomodations</a> </li>
@@ -61,7 +61,8 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
-            <p class="lead m-x-auto">Lorem Ipsum <strong>Dolor</strong></p>
+            <h2 class="block-title m-b-sm text-uppercase">Our Story</h2>
+            <p class="m-x-auto">Lorem Ipsum <strong>Dolor</strong></p>
           </div>
         </div>
       </div>
