--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div class="block block-bordered-lg" id="our-story">
       <div class="container">
         <div class="row">
-          <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
-            <h2 class="block-title m-b-sm text-uppercase">Our Story</h2>
+          <div class="col-sm-10 col-sm-offset-1 m-b-lg">
+            <h2 class="block-title m-b-sm text-center text-uppercase">Our Story</h2>
             <p class="m-x-auto"> Catherine and Ryan grew up around each other without ever really knowing each other. </p>
             <p class="m-x-auto"> Catherine’s only memory of Ryan before 2006 is in the youth music suite at Lindenwood Christian Church. Every day as she arrived for choir rehearsal, Ryan would catch her eye from across the room and stick his tongue out at her. Catherine thought he was equally mean and adorable. But they quickly forgot all about each other, even as they spent an hour a week in the same space. </p>
             <p class="m-x-auto"> On the summer choir trip before their freshman year of highschool, several members of the choir were hanging out in one of the hotel rooms. A friend was straightening Catherine’s hair when she accidentally burned her neck. Ryan, who hardly knew Catherine, rushed out of the room with her to retrieve ice. Instantly, Catherine developed a crush. </p>
