--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="../"> <span>Catherine &amp; Ryan</span> </a>
         </div>
-        <div class="navbar-collapse collapse" id="navbar-collapse">
+        <div class="navbar" id="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li> <a href="#our-story">Our Story</a> </li>
             <li> <a href="#wedding-party">Wedding Party</a> </li>
