--- a/index.html
+++ b/index.html
@@ -93,9 +93,12 @@
           </div>
         </div>
         <div class="row">
+          <div class="text-center col-sm-2 col-sm-offset-5"> <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97350&w=350&h=350" class="img-circle" style="width: 100%;" /> </div>
+        </div>
+        <div class="row">
           <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
             <h2 class="block-title m-b-sm text-uppercase">Maid of Honor</h2>
-            <p class="lead m-x-auto"><strong>Kaitlyn Flagg</strong>  and Catherine are Pi Beta Phi sorority sisters , but they first became close in dance classes at Birmingham-Southern College. Now they are separated by quite a distance, but they remain close friends. Favorite shared activities include dancing too long, singing too loudly, and eating cookie dough with a rom com after a long day. Kaitlyn is Catherine’s true “sista-friend,” a best friend for life. </p>
+            <p class="lead m-x-auto"><strong>Kaitlyn Flagg</strong>and Catherine are Pi Beta Phi sorority sisters , but they first became close in dance classes at Birmingham-Southern College. Now they are separated by quite a distance, but they remain close friends. Favorite shared activities include dancing too long, singing too loudly, and eating cookie dough with a rom com after a long day. Kaitlyn is Catherine’s true “sista-friend,” a best friend for life. </p>
           </div>
         </div>
         <div class="row">
@@ -108,20 +111,20 @@
               <li class="m-b-lg">
                 <div class="featured-list-icon text-primary">
                   <!--<span class="icon icon-cloud"></span>--></div>
-                <p class="featured-list-icon-text m-b-0"><strong>Jennifer Brown</strong> is Catherine’s sister. She is a teacher of camp songs, the director of family plays, and a board game champion!</p>
-                <p class="featured-list-icon-text"> </p>
+                <p class="featured-list-icon-text m-b-0"><strong>Jennifer Brown</strong></p>
+                <p class="featured-list-icon-text">Jennifer is Catherine’s sister. She is a teacher of camp songs, the director of family plays, and a board game champion!</p>
               </li>
               <li class="m-b-lg">
                 <div class="featured-list-icon text-primary">
                   <!--<span class="icon icon-emoji-neutral"></span>--></div>
-                <p class="featured-list-icon-text m-b-0"><strong>Sarah Brown-Intoccia</strong> is Catherine’s sister. She is a teacher of folk songs and has the sweetest and most comforting spirit. Catherine misses living in Birmingham where she was able to spend more time with her sister. </p>
-                <p class="featured-list-icon-text"> </p>
+                <p class="featured-list-icon-text m-b-0"><strong>Sarah Brown-Intoccia</strong></p>
+                <p class="featured-list-icon-text">Sarah  is Catherine’s sister. She is a teacher of folk songs and has the sweetest and most comforting spirit. Catherine misses living in Birmingham where she was able to spend more time with her sister.</p>
               </li>
               <li class="m-b-lg">
                 <div class="featured-list-icon text-primary">
                   <!--<span class="icon icon-emoji-neutral"></span>--></div>
-                <p class="featured-list-icon-text m-b-0"><strong>Caroline Dean</strong> is Catherine’s sister. She has long been Catherine’s style guru, and a true confidante. Catherine is lucky to have such a great sister and friend here in Memphis.</p>
-                <p class="featured-list-icon-text"> </p>
+                <p class="featured-list-icon-text m-b-0"><strong>Caroline Dean</strong></p>
+                <p class="featured-list-icon-text">Caroline is Catherine’s sister. She has long been Catherine’s style guru, and a true confidante. Catherine is lucky to have such a great sister and friend here in Memphis.</p>
               </li>
             </ul>
           </div>
@@ -130,20 +133,20 @@
               <li class="m-b-lg">
                 <div class="featured-list-icon text-primary">
                   <!--<span class="icon icon-cloud"></span>--></div>
-                <p class="featured-list-icon-text m-b-0"><strong>Catie Gilliland</strong>is Catherine’s sorority sister and was a fellow English major at BSC. Catie and Catherine have many interests in common, and they continue to bond over literature and feminism.</p>
-                <p class="featured-list-icon-text"> </p>
+                <p class="featured-list-icon-text m-b-0"><strong>Catie Gilliland</strong></p>
+                <p class="featured-list-icon-text">Catie is Catherine’s sorority sister and was a fellow English major at BSC. Catie and Catherine have many interests in common, and they continue to bond over literature and feminism.</p>
               </li>
               <li class="m-b-lg">
                 <div class="featured-list-icon text-primary">
                   <!--<span class="icon icon-emoji-neutral"></span>--></div>
-                <p class="featured-list-icon-text m-b-0"><strong>Megan Turner</strong> is Ryan’s sister, and a longtime friend. She has been so sweet to welcome Catherine into the family! </p>
-                <p class="featured-list-icon-text"> </p>
+                <p class="featured-list-icon-text m-b-0"><strong>Megan Turner</strong></p>
+                <p class="featured-list-icon-text">Megan is Ryan’s sister, and a longtime friend. She has been so sweet to welcome Catherine into the family!</p>
               </li>
               <li class="m-b-lg">
                 <div class="featured-list-icon text-primary">
                   <!--<span class="icon icon-emoji-neutral"></span>--></div>
-                <p class="featured-list-icon-text m-b-0"><strong>Liz Wallace</strong>is Catherine’s sorority sister. Liz and Catherine became close in the “caf” at BSC where they shared many slow meals and long conversations. Liz and Catherine share a love of food, cinema, American history, and The Muppets. </p>
-                <p class="featured-list-icon-text"> </p>
+                <p class="featured-list-icon-text m-b-0"><strong>Liz Wallace</strong></p>
+                <p class="featured-list-icon-text">Liz is Catherine’s sorority sister. Liz and Catherine became close in the “caf” at BSC where they shared many slow meals and long conversations. Liz and Catherine share a love of food, cinema, American history, and The Muppets.</p>
               </li>
             </ul>
           </div>
