--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="">
-    <title> Catherine &and; Ryan &middot; Wedding </title>
+    <title> Catherine + Ryan &middot; Wedding </title>
     <link href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cinzel:700" rel="stylesheet" type="text/css">
     <link href="assets/css/toolkit-minimal.css" rel="stylesheet">
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-default navbar-static-top navbar-padded text-uppercase app-navbar">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="../"> <span>Catherine &amp; Ryan</span> </a>
+          <a class="navbar-brand" href="../"> <span>Catherine + Ryan</span> </a>
         </div>
         <div class="navbar" id="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -88,7 +88,7 @@
         </div>
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
-            <h2 class="block-title m-b-sm text-uppercase">Honorary Maid of Honor</h2>
+            <h2 class="block-title m-b-sm text-uppercase">Honorary Matron of Honor</h2>
             <p class="lead m-x-auto"><strong>Deborah Clubb</strong> is Catherine’s mom, and her oldest and closest friend. She is the Loralai to Catherine’s Rory, the creamed potatoes to her cornbread, and she is Catherine’s greatest heroine.</p>
           </div>
         </div>
