--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="text-center col-sm-2 col-sm-offset-5"> <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97350&w=350&h=350" class="img-circle" style="width: 100%;" /> </div>
+          <div class="text-center col-sm-2 col-sm-offset-5"> <img src="assets/img/kflagg.jpg" class="img-circle" style="width: 100%;" /> </div>
         </div>
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2 text-center m-b-lg">
