--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           width: 1px;
           min-width: 100%;
           *width: 100%;
+          font-size: 13pt;
         }
         #stage {
           height: 1px;
