--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <li> <a href="#wedding-party">Wedding Party</a> </li>
             <li> <a href="#the-big-day">The Big Day</a> </li>
             <li> <a href="#accomadations">Accomodations</a> </li>
+            <li> <a href="https://goo.gl/photos/bMC4VgTctouhLWJG7">Photos</a> </li>
             <li> <a href="https://www.myregistry.com/wedding-registry/Ryan-Turner-Catherine-Clubb-Brown-Memphis-TN/1083828">Registry</a> </li>
             <li> <a href="#contact">Contact</a> </li>
           </ul>
