--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </nav>
     <div class="block app-block-intro" id="intro">
-      <div class="container text-center"> <img src="assets/img/aeternumphotography83.jpg"> </div>
+      <div class="container text-center"> <img src="https://lh3.googleusercontent.com/LdM6FcYFNinWpdeO0FlCkf2AESy9lAEYrQDg_vcFxSwjADn5dnQSboYdYdCZVJEvWEHVccnifua1PhwqqhK0nMP-JAynH0fN8qJOsgvAuP90p2rl0v1oowZkjmfgrAiIZOcrWyjGUyj0hV2M4iEHVPTwoHAhOXOs2jg9hu7BvVl281SYSaWV5ucDQi1tEgWIRdBNw8KlynXf39hXPlerOl5rBRKEdiuWhFA9m0lH3UBKoCPMOuGS9uxKP9uBvJIu8FfBbbmRHjuSSmaAql07AAxBul-cbd8G2XrS3TEavuKWxgNDim_VKPGVyBaakfrYxVkjZ3qrlzijUJlKc076NpuGWmoXiAywpIwSu0gHlEYTkDRmFxlCp8Re1zz5D7VzKIeCJDOpGKK9MEUrUVs9Y4E4cYCAr04PFqbq98z6E3feQQgFD73fvRZPts-Dy_yQoG-VW1emjgLVy_sQxFiN9SsNfvEEhz5X7YI_RHK7tYjmd5gwzTNK87fZwIdVTMKovRmTOYog-yLTswXkqairlDb6dwykLNZSa5LoV5Co8lF2P1Q8OvdmHBssIKoCuKiY4-nvjgYg6dcIMzpi5jvKQh1ZUmTNgtTm=w2454-h1629-no"> </div>
     </div>
     <div class="block block-bordered-lg" id="our-story">
       <div class="container">
