--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li> <a href="#accomadations">Accomodations</a> </li>
             <li> <a href="https://goo.gl/photos/bMC4VgTctouhLWJG7">Photos</a> </li>
             <li> <a href="https://www.myregistry.com/wedding-registry/Ryan-Turner-Catherine-Clubb-Brown-Memphis-TN/1083828">Registry</a> </li>
-            <li> <a href="#contact">Contact</a> </li>
+            <li> <a href="https://docs.google.com/forms/d/1M5HOlsotRkOOVoZj_XkN3mEARnTGtz7ww3fojiNk_t8/viewform?entry.745075367&entry.1174250504">RSVP</a> </li>
           </ul>
         </div>
         <!--/.nav-collapse -->
