--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <p class="m-x-auto"> College life was incredible. And, they were only an hour apart. They spent as many weekends together as they could, traveling by car, bus, and sometimes train to see each other. </p>
 <p class="m-x-auto"> Senior year rolled around. Catherine applied to graduate school in Memphis and Ryan sought employment. Catherine was accepted to the Social Work graduate program at the University of Memphis and decided to attend. They knew where she would be for at least the next two years, but they hated the prospect of being truly long-distance. They worried. But Ryan was soon offered a job at AutoZone in downtown Memphis. </p>
 <p class="m-x-auto"> During the summer of 2014, Ryan and Catherine both moved back to their hometown of Memphis, Tennessee. Ryan worked. Catherine went to school. </p>
-<p class="m-x-auto"> He wanted to propose. She was ready, too. “But wait until I’m done with graduate school,” Catherine said. “I can’t deal with the stress of planning a wedding on top of school.” He held out as long as he could. On December 23, 2015 Ryan asked Catherine to marry him. She said yes. </p>
+<p class="m-x-auto"> He wanted to propose. They had both been ready for marriage for a long time. “But wait until I’m done with graduate school,” Catherine said. “I can’t deal with the stress of planning a wedding on top of school.” He held out as long as he could. On December 23, 2015 Ryan asked Catherine to marry him. She said yes and then cried from joy for a solid half hour. </p>
 <p class="m-x-auto"> And the rest, as they say, is history. Catherine and Ryan will be married on September 3rd, 2016, the 9th anniversary of their first date. </p>
           </div>
         </div>
